# cpp-in-action

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt
src/asio/: CMakeLists.txt
src/asio/basic/: CMakeLists.txt
src/asio/basic/src/: Buffer.cpp  Client.cpp  Context.cpp  Endpoint.cpp  Resolver.cpp  Socket.cpp  ThreadPool.cpp  Timers.cpp
src/asio/classic/chat-async/: CMakeLists.txt
src/asio/classic/chat-async-service/: CMakeLists.txt
src/asio/classic/chat-async-service/include/: ChatSession.hpp
src/asio/classic/chat-async-service/src/: ChatServer.cpp
src/asio/classic/chat-async/include/: ChatServer.hpp  ChatSession.hpp  Common.hpp  Runner.hpp
src/asio/classic/chat-async/src/: ChatServer.cpp  ChatSession.cpp  Runner.cpp  Service.cpp
src/asio/classic/chunked-delivery/: CMakeLists.txt
src/asio/classic/chunked-delivery/include/: Http.hpp  TcpClient.hpp  TcpServer.hpp
src/asio/classic/chunked-delivery/src/: Service.cpp  TcpClient.cpp  TcpServer.cpp
src/asio/classic/daytime-async/: CMakeLists.txt
src/asio/classic/daytime-async-service/: CMakeLists.txt
src/asio/classic/daytime-async-service/include/: TcpClient.hpp  TcpServer.hpp
src/asio/classic/daytime-async-service/src/: TcpClient.cpp
src/asio/classic/daytime-async/include/: Common.hpp  TcpClient.hpp  TcpServer.hpp  TcpSession.hpp
src/asio/classic/daytime-async/src/: Service.cpp  TcpClient.cpp  TcpServer.cpp  TcpSession.cpp
src/asio/classic/file-exchange-service/: CMakeLists.txt
src/asio/classic/file-exchange-service/include/: Http.hpp  TcpServer.hpp
src/asio/classic/p2p-sync/: CMakeLists.txt
src/asio/classic/p2p-sync-service/: CMakeLists.txt  README.md
src/asio/classic/p2p-sync-service/src/: TcpServer.cpp
src/asio/classic/p2p-sync/include/: TcpClient.hpp  TcpServer.hpp
src/asio/classic/p2p-sync/src/: Service.cpp  TcpClient.cpp  TcpServer.cpp
src/asio/classic/tcp-async/: CMakeLists.txt
src/asio/classic/tcp-async-service/: CMakeLists.txt
src/asio/classic/tcp-async-service/include/: TcpAsyncAcceptor.h  TcpAsyncService.h
src/asio/classic/tcp-async-service/src/: TcpAsyncAcceptor.cpp  TcpAsyncClient.cpp
src/asio/classic/tcp-echo/: CMakeLists.txt
src/asio/classic/tcp-echo-service/: CMakeLists.txt
src/asio/classic/tcp-sync/: CMakeLists.txt
src/asio/classic/tcp-sync-service/: CMakeLists.txt
src/asio/classic/udp-sync/: CMakeLists.txt
src/asio/classic/udp-sync-service/: CMakeLists.txt
src/asio/coro/chunked-delivery/: CMakeLists.txt
src/asio/coro/echo-service/: CMakeLists.txt
src/asio/coro/primitives/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/common/: HeapMemoryTracker.hpp  MemoryDump.hpp  MemoryDumper.hpp  MemoryResourcesTracker.hpp  Timer.h
src/common/src/: HeapMemoryTracker.cpp  MemoryDump.cpp  MemoryResourcesTracker.cpp
src/general/: CMakeLists.txt  CompileTimeIf.cpp  ContainerImprovementsTest.cpp  FoldExpression.cpp  FoldExpressionTest.cpp  TemplateClassDeductionTest.cpp  UncaughtExceptionTest.cpp  VariantTest.cpp
src/general/src/: AggregateExtension.cpp  AnyType.cpp  Attributes.cpp  Bits.cpp  Chrono.cpp  CompareFloatNumbers.cpp  CompileTimeIf.cpp  Concepts.cpp  ContainerImprovements.cpp  CopyElision.cpp  Coroutine.cpp  DeductionGuide.cpp  DeductionGuideTest.cpp  EnumIterator.cpp  ExtendedUsingDeclaration.cpp  ExtendedUsingDeclarationTest.cpp  FileSystem.cpp  FoldExpression.cpp  Formatting.cpp  IfSwitchRangeForWithInit.cpp  LambdaExtension.cpp  MinorFeatures.cpp  MinorFeaturesTest.cpp  NewDeleteOperators.cpp  Optional.cpp  OptionalTest.cpp  PolymorphicMemory.cpp  PolymorphicMemoryTest.cpp  Ranges.cpp  Span.cpp  String.cpp  StringSearch.cpp  StringSearchTest.cpp  StructuredBinding.cpp  Template.cpp  TemplateClassDeduction.cpp  TemplateMeta.cpp  TemplateVariadic.cpp  ThreeWayComparison.cpp  Tuples.cpp  (+3 more)
src/idioms/: CMakeLists.txt
src/idioms/src/: CopyAndSwap.cpp
src/modules/example1/: README.md  main.cpp  math.cpp
src/modules/example2/: README.md  main.cpp  math.cpp  mathAdd.cpp  mathMul.cpp
src/modules/example3/: README.md  math.cpp
src/modules/example4/: README.md  main.cpp  math.cpp  mathModule1.cpp  mathModule2.cpp
src/modules/example5/: README.md  main.cpp  math.cpp  mathModule1.cpp  mathModule2.cpp
src/modules/example6/: README.md  main.cpp  math.cpp
src/network/: CMakeLists.txt
src/network/coro/echo-service/: CMakeLists.txt
src/network/misc/chat-async-service/: CMakeLists.txt
src/network/misc/daytime-async-service/: CMakeLists.txt
src/network/misc/file-exchange-service/: CMakeLists.txt
src/network/misc/p2p-sync-service/: CMakeLists.txt
src/network/misc/tcp-async-service/: CMakeLists.txt
src/network/misc/tcp-sync-service/: CMakeLists.txt
src/network/misc/udp-sync-service/: CMakeLists.txt
src/network/src/: Client.cpp  Context.cpp  Endpoint.cpp  Resolver.cpp  Socket.cpp  ThreadPool.cpp
src/parallel/: CMakeLists.txt  ParallelAlgorithms.cpp  ParallelAlgorithmsTest.cpp
src/parallel/src/: Atomic.cpp  Barrier.cpp  Conditional.cpp  DiningPhilosophersProblem.cpp  Fences.cpp  Initialization.cpp  Latch.cpp  Lock.cpp  LockFreeStack.cpp  ParallelAlgorithms.cpp  Semaphore.cpp  Singleton.cpp  Thread.cpp  ThreadLocal.cpp
src/patterns/: CMakeLists.txt
src/patterns/doc/: Reactor.md
src/patterns/include/patterns/: ComponentConfigurator.hpp  ComponentConfigurator.md  ExtensionInterface.hpp  ExtensionInterface.md  Interceptor.hpp  Interceptor.md  Reactor.hpp  WrapperFacade.hpp  WrapperFacade.md
src/patterns/src/: ActiveObject.cpp  MonitorObject.cpp  Reactor.cpp  Reactor.hpp  ReactorTest.cpp  Singleton.cpp  StrategizedLocking.cpp  ThreadSafeInterface.cpp  WrapperFacade.hpp
test/: CMakeLists.txt
test/src/: AggreagateExtensionTest.cpp  StructuredBindingTest.cpp
test/src/general/: AggreagateExtensionTest.cpp  CopyElisionTest.cpp  DeductionGuide.cpp  EmbeddedInitTest.cpp  ExtendedUsingDeclaration.cpp  FoldExpression.cpp  IfAndSwitchWithInitTest.cpp  LambdaExtensionTest.cpp  MinorFeaturesTest.cpp  RelaxedEnumTest.cpp  TemplateClassDeduction.cpp
(+122 files in other folders)
