add_subdirectory(basic)

add_subdirectory(classic/p2p-sync-service)
add_subdirectory(classic/daytime-async-service)
add_subdirectory(classic/file-exchange-service)
add_subdirectory(classic/tcp-async-service)
add_subdirectory(classic/tcp-sync-service)
add_subdirectory(classic/udp-sync-service)
add_subdirectory(classic/chat-async-service)
add_subdirectory(classic/tcp-echo-service)

add_subdirectory(coro/echo-service)