add_subdirectory(basic)

add_subdirectory(classic/chat-async)
add_subdirectory(classic/chunked-delivery)
add_subdirectory(classic/daytime-async)
add_subdirectory(classic/p2p-sync)
add_subdirectory(classic/tcp-async)
add_subdirectory(classic/tcp-echo)
add_subdirectory(classic/tcp-sync)
add_subdirectory(classic/udp-sync)

add_subdirectory(coro/echo-service)
add_subdirectory(coro/primitives)
